--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,11 @@
       <script src="/depedentSelect.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"></script>
       <script src="/jquery-mask-plugin/dist/jquery.mask.js"></script>
+      <script src="/typeahead.js/dist/bloodhound.js"></script>
+      <script src="/typeahead.js/dist/typeahead.bundle.js"></script>
+      <script src="/typeahead.js/dist/typeahead.jquery.js"></script>
     <meta charset="utf-8">
-    <title>Minha Gasosa - admin</title>
+    <title>Admin HOME!</title>
 
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--<link href="css/style.css" rel="stylesheet">-->
