--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
         </form>
-        <button href="/register" class="form-control btn btn-primary btn-md">Registrar</button>
+        <button class="form-control btn btn-primary btn-md"><a href="/register">Registrar </a> </button>
         <p class="m-t"> <small>CGhub &copy; 2017</small> </p>
     </div>
     </div>
