Server pages integration

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,54 +1,8 @@
 <div id="wrapper">
     <div id="page-wrapper" class="gray-bg">
-        <div class="row border-bottom white-bg">
-            <nav class="navbar navbar-fixed-top" role="navigation">
-                <div class="navbar-header" style="margin-left: 1%">
-                    <span href="#"><img alt="image" src="/logo.png" style="width: 90px; margin-top: 13%;"/></span>
-                </div>
-                <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a role="button" href="home.html"> Início</a>
-                        </li>
-                        <li class="dropdown">
-                            <a aria-expanded="false" role="button" href="#" class="dropdown-toggle"
-                               data-toggle="dropdown"> Eventos <span class="caret"></span></a>
-                            <ul role="menu" class="dropdown-menu">
-
-                                <li><a href="events.html">Participando</a></li>
-                                <li><a href="events.html">Meus Eventos</a></li>
-                                <li><a href="events.html">Fechados</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a aria-expanded="false" role="button" href="#" class="dropdown-toggle"
-                               data-toggle="dropdown"> Minha Conta</a>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-top-links navbar-right">
-                        <li>
-                            <a href="">
-                                R$ 120,00
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <i class="fa fa-map-marker"></i> Campina Grande, PB
-                            </a>
-                        </li>
-                        <li>
-                            <a href="login.html">
-                                <i class="fa fa-sign-out"></i> Sair
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
         <div class="wrapper wrapper-content">
             <div class="container">
                 <div class="wrapper wrapper-content animated fadeInUp">
-
                     <div class="ibox">
                         <div class="ibox-title">
                             <h5>Estabelecimentos</h5>
@@ -58,12 +12,12 @@
                                 <div class="col-md-2">
                                     <div>
                                         <select class="form-control m-b">
-                                            <option>Categoria</option>
-                                            <option>Festa</option>
-                                            <option>Música</option>
-                                            <option>Esporte</option>
-                                            <option>Cinema</option>
-                                            <option>Outros</option>
+                                            <option value="OTHERS">Categoria</option>
+                                            <option value="PARTY">Festa</option>
+                                            <option value="MUSIC">Música</option>
+                                            <option value="SPORTS">Esporte</option>
+                                            <option value="MOVIES">Cinema</option>
+                                            <option value="OTHERS">Outros</option>
                                         </select>
                                     </div>
                                 </div>
@@ -99,7 +53,7 @@
                                             <p>Rua josé estevão de araujo, 92</p>
                                         </td>
                                         <td class="project-actions">
-                                            <a href="#" class="btn btn-white btn-lg">Ver mais </a>
+                                            <a href="/site/company/58a88bdb14a9e43b3cf33af2" class="btn btn-white btn-lg">Ver mais </a>
                                         </td>
                                     </tr>
                                     <tr>
