--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,8 @@
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
+    <script src="/js/plugins/slick/slick.min.js"></script>
+
     <!-- Steps -->
     <script src="/js/plugins/steps/jquery.steps.min.js"></script>
 
@@ -33,10 +35,11 @@
     <script src="/typeahead.js/dist/typeahead.jquery.js"></script>
 
     <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!-- Custom and plugin javascript -->
     <script src="/js/plugins/pace/pace.min.js"></script>
+
+    <script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!-- Flot -->
     <script src="/js/plugins/flot/jquery.flot.js"></script>
@@ -110,55 +113,54 @@
 {{else}}
     <body class="gray-bg">
 {{/if}}
-
-
-<div>
-    {{#if user}}
-            <nav class="navbar navbar-fixed-top navbar-static-top" role="navigation">
-                <div class="navbar-header" style="margin-left: 1%">
-                    <span href="home.html"><img alt="image" src="/logo.png" style="width: 90px; margin-top: 13%;"/></span>
-                </div>
-                <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a role="button" href="home.html"> Início</a>
-                        </li>
-                        <li class="dropdown">
-                            <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Eventos <span class="caret"></span></a>
-                            <ul role="menu" class="dropdown-menu">
-                                <li><a href="events.html">Participando</a></li>
-                                <li><a href="events.html">Meus Eventos</a></li>
-                                <li><a href="events.html">Fechados</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a aria-expanded="false" role="button" href="my_account.html"> Minha Conta</a>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-top-links navbar-right">
-                        <li>
-                            <a href="">
-                                R$ 120,00
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <i class="fa fa-map-marker"></i> Campina Grande, PB
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/site/user/logout">
-                                <i class="fa fa-sign-out"></i> Sair
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-    {{/if}}
-    {{{body}}}
+        {{#if user}}
+            <div class="white-bg">
+                <nav class="navbar navbar-fixed-top navbar-static-top" role="navigation">
+                    <div class="navbar-header" style="margin-left: 1%">
+                        <span href="/site/user/home"><img alt="image" src="/logo.png"
+                                                          style="width: 90px; margin-top: 13%;"/></span>
+                    </div>
+                    <div class="navbar-collapse collapse" id="navbar" style="margin-left: 9%">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a role="button" href="/site/user/home"> Início</a>
+                            </li>
+                            <li class="dropdown">
+                                <a aria-expanded="false" role="button" href="#" class="dropdown-toggle"
+                                   data-toggle="dropdown"> Eventos <span class="caret"></span></a>
+                                <ul role="menu" class="dropdown-menu">
+                                    <li><a href="/site/user/events/mine">Participando</a></li>
+                                    <li><a href="/site/user/events/participating">Meus Eventos</a></li>
+                                    <li><a href="/site/user/events/closed">Fechados</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a aria-expanded="false" role="button" href="/site/user/account"> Minha Conta</a>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-top-links navbar-right">
+                            <li>
+                                <a href="">
+                                    R$ 120,00
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa fa-map-marker"></i> Campina Grande, PB
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/site/user/logout">
+                                    <i class="fa fa-sign-out"></i> Sair
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        {{/if}}
+        {{{body}}}
+    </div>
 </div>
-
-
-<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
