--- a/views/admin/admin_home.handlebars
+++ b/views/admin/admin_home.handlebars
@@ -6,19 +6,18 @@
             <div class="alert alert-danger">{{error.message}}</div>
         {{/if}}
         <h3 style="text-align: center;">Adicionar Empresa</h3>
-        <form class="form-login" method="post" action="register">
+        <form class="form-login" id="form1" method="post" action="/site/company/">
             <input type="text" name="name" class="form-control input-sm" placeholder="Nome"/>
-            <input type="text" name="login" class="form-control input-sm" placeholder="Login"/>
-            <input type="password" name="password" class="form-control input-sm" placeholder="Senha"/>
+            <input type="text" name="address" class="form-control input-sm" placeholder="Endereço"/>
+
             <input class="typeahead form-control">
-            <input type="text" name="email" class="form-control input-sm" placeholder="Email"/>
             <label>Métodos de pagamento de crédito</label>
             {{#each payaments.credit}}
-                <input type="checkbox" class="form-check-input" name="{{payamentMethos}}" value="{{_id}}"> {{name}}<br>
+                <input type="checkbox" class="form-check-input" name="payamentMethos" value="{{_id}}"> {{name}}<br>
             {{/each}}
             <label>Métodos de pagamento de débito</label>
             {{#each payaments.debit}}
-                <input type="checkbox" class="form-check-input" name="{{payamentMethos}}" value="{{_id}}"> {{name}}<br>
+                <input type="checkbox" class="form-check-input" name="payamentMethos" value="{{_id}}"> {{name}}<br>
             {{/each}}
             <input type="text" name="phoneNumber" class="form-control input-sm" placeholder="Telefone"/>
             <div class="form-group">
@@ -28,6 +27,7 @@
                     <option value="MUSIC">Música</option>
                     <option value="PARTY">Festa</option>
                     <option value="SPORTS">Esportes</option>
+                    <option value="MOVIES">Filmes</option>
                     <option values="OTHERS">Outros</option>
                 </select>
             </div>
@@ -108,6 +108,7 @@
                     // Map the remote source JSON array to a JavaScript object array
                     return $.map(cities, function (city) {
                         return {
+                            id: city._id,
                             value: city.nome
                         };
                     });
@@ -120,6 +121,11 @@
         $('.typeahead').typeahead(null, {
             displayKey: 'value',
             source: movies.ttAdapter()
-        });
+        }).on('typeahead:selected', function(e, data) {
+            var input = $("<input>")
+                    .attr("type", "hidden")
+                    .attr("name", "city").val(data.id);
+            $('#form1').append($(input));
+        });;
     });
 </script>
