--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -11,8 +11,8 @@
                                 </div>
                                 <div class="ibox-content">
                                     <form role="form">
-                                        <div class="form-group"><label>Nome</label> <input type="email" placeholder="Nome completo" class="form-control"></div>
-                                        <div class="form-group"><label>Email</label> <input type="email" placeholder="Email" class="form-control"></div>
+                                        <div class="form-group"><label>Nome</label> <input type="email" placeholder="Nome completo" class="form-control" value="{{user.name}}"></div>
+                                        <div class="form-group"><label>Email</label> <input type="email" placeholder="Email" class="form-control" value="{{user.email}}"></div>
                                         <div class="form-group"><label>Senha</label> <input type="password" placeholder="Senha" class="form-control"></div>
                                         <div class="form-group"><label>Confirmar senha</label> <input type="password" placeholder="Confirmar senha" class="form-control"></div>
                                         <div class="form-group" style="height: 1px;">
@@ -66,11 +66,8 @@
 
         </div>
         <div class="footer">
-            <div class="pull-right">
-                10GB of <strong>250GB</strong> Free.
-            </div>
             <div>
-                <strong>Copyright</strong> Example Company &copy; 2014-2017
+                GoTo &copy; 2017
             </div>
         </div>
 
