--- a/views/admin/admin_home.handlebars
+++ b/views/admin/admin_home.handlebars
@@ -1,6 +1,7 @@
 
-
-<div class="row">
+<div class="wrapper wrapper-content">
+    <div class="container">
+        <div class="row">
     <div class="col-md-offset-4 col-md-4">
         {{#if error}}
             <div class="alert alert-danger">{{error.message}}</div>
@@ -36,6 +37,9 @@
         </form>
     </div>
 </div>
+    </div>
+</div>
+
 
 <style>
     .alert {
