added some new screens

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,8 @@
     <link href="/css/plugins/slick/slick.css" rel="stylesheet">
     <link href="/css/plugins/slick/slick-theme.css" rel="stylesheet">
     <link href="/css/plugins/steps/jquery.steps.css" rel="stylesheet">
+    <link href="/css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
+    <link href="/css/plugins/ionRangeSlider/ion.rangeSlider.skinHTML5.css" rel="stylesheet">
 
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
@@ -60,6 +62,7 @@
 
     <script src="/depedentSelect.js"></script>
     <script src="/jquery-mask-plugin/dist/jquery.mask.js"></script>
+    <script src="/js/plugins/ionRangeSlider/ion.rangeSlider.min.js"></script>
 
     <title>GoTo</title>
 
