Change handlebars to ejs

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,3 +1,5 @@
+<% include layout_start %>
+
 <div id="wrapper">
     <div id="page-wrapper" class="gray-bg">
         <div class="wrapper wrapper-content">
@@ -73,3 +75,5 @@
 
     </div>
 </div>
+
+<% include layout_end %>
