--- a/views/event_details.ejs
+++ b/views/event_details.ejs
@@ -1,3 +1,5 @@
+<% include layout_start %>
+
 <div class="wrapper wrapper-content">
     <div class="container">
         <div class="row">
@@ -290,3 +292,5 @@
         });
     });
 </script>
+
+<% include layout_end %>
