--- a/views/company_details.ejs
+++ b/views/company_details.ejs
@@ -1,39 +1,63 @@
+<% include layout_start %>
+
 <div class="wrapper wrapper-content">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <div class="wrapper wrapper-content animated fadeInUp">
-
+            <div class="row">
+                <div class="wrapper wrapper-content animated fadeInUp" style="padding-bottom: 0;">
                     <div class="ibox">
                         <div class="ibox-title">
-                            <h5>Meus Eventos</h5>
+                            <h5>Local</h5>
                         </div>
                         <div class="ibox-content">
-                            <div class="row m-b-sm m-t-sm">
-                                <div class="col-md-2">
-                                    <div>
-                                        <select class="form-control m-b">
-                                            <option>Categoria</option>
-                                            <option>Festa</option>
-                                            <option>Música</option>
-                                            <option>Esporte</option>
-                                            <option>Cinema</option>
-                                            <option>Outros</option>
-                                        </select>
+                            <div class="project-list" style="font-size: 14px">
+                                <h1 style="margin-bottom: 20px">Universidade Federal de Campina Grande</h1>
+
+                                <div class="join-vertical-text" style="margin-top: 10px">
+                                    <h5 class="join-vertical-text">Rua das Juremas, 666</h5>
+                                    <h5 class="join-vertical-text">Campina Grande - Paraíba</h5>
+                                    <h5>83 3322 2245</h5>
+                                </div>
+
+                                <h4 style="margin-top: 30px">Um local aconchegante e familiar. Um local para se passar o
+                                    tempo e perder a vida</h4>
+                                <div>
+                                    <div class="slick_demo_2" style="margin-top: 20px;width: 97.5%; margin-left: 10px;">
+                                        <div>
+                                            <div class="ibox-content">
+                                                <img alt="image" class="img-responsive" src="/p_big3.jpg">
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="ibox-content">
+                                                <img alt="image" class="img-responsive" src="/p_big1.jpg">
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="ibox-content">
+                                                <img alt="image" class="img-responsive" src="/p_big2.jpg">
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="ibox-content">
+                                                <img alt="image" class="img-responsive" src="/p_big1.jpg">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-10">
-                                    <div class="input-group"><input style="height: 35px;" type="text"
-                                                                    placeholder="Encontre o estabelecimento..."
-                                                                    class="input-sm form-control"> <span
-                                            class="input-group-btn">
-                                                <button type="button" class="btn btn-sm btn-primary"
-                                                        style="height: 35px;"> Buscar</button> </span></div>
-                                </div>
                             </div>
-
-                            <div class="project-list">
-
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="wrapper wrapper-content animated fadeInUp" style="padding-top: 0">
+                    <div class="ibox">
+                        <div class="ibox-title">
+                            <h5>Eventos Disponíveis</h5>
+                        </div>
+                        <div class="ibox-content">
+                            <div class="table-responsive" style="max-height: 400px">
                                 <table class="table table-hover">
                                     <tbody>
                                     <tr>
@@ -68,8 +92,8 @@
                                                     </i>4000/10000</span>
                                         </td>
                                         <td style="text-align: right">
-                                            <a href="/site/event/qt678"><button class="btn btn-white btn-lg">Ver mais
-                                            </button></a>
+                                            <button href='events_detail.html' class="btn btn-white btn-lg">Ver mais
+                                            </button>
                                         </td>
                                     </tr>
                                     <tr>
@@ -319,6 +343,45 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
+
+<script>
+    $(document).ready(function() {
+
+
+        $('.slick_demo_2').slick({
+            infinite: true,
+            slidesToShow: 3,
+            slidesToScroll: 1,
+            centerMode: true,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                        infinite: true,
+                        dots: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+    });
+</script>
+
+<% include layout_end %>
