Adjusts on navbar

--- a/views/layout_start.ejs
+++ b/views/layout_start.ejs
@@ -133,8 +133,8 @@
                     <a aria-expanded="false" role="button" href="#" class="dropdown-toggle"
                        data-toggle="dropdown"> Eventos <span class="caret"></span></a>
                     <ul role="menu" class="dropdown-menu">
-                        <li><a href="/site/user/events/mine">Participando</a></li>
-                        <li><a href="/site/user/events/participating">Meus Eventos</a></li>
+                        <li><a href="/site/user/events/participating">Participando</a></li>
+                        <li><a href="/site/user/events/mine">Meus Eventos</a></li>
                         <li><a href="/site/user/events/closed">Fechados</a></li>
                     </ul>
                 </li>
