ajustes main e register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,7 @@
                             <div class="step-content" style="height: 300px;">
                                 <div class="col-lg-8 text-center" style="margin-left: 20%">
                                     <h2>Informe sua cidade</h2>
-                                    <input class="typeahead form-control">
+                                    <input class="typeahead form-control"/>
                                 </div>
                             </div>
 
