--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,5 @@
+<% include layout_start %>
+
 <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
         <img alt="image" src="logo.png"  style="width: 300px;" />
@@ -17,3 +19,5 @@
         <p class="m-t"> <small>GoTo &copy; 2017</small> </p>
     </div>
 </div>
+
+<% include layout_end %>
