--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,7 +43,7 @@
                                                                 style="width: 90px; height: 90px;"/></span>
                                             </td>
                                             <td class="project-title" style="max-width: 360px;">
-                                                <a href="project_detail.html" style="font-size: 20px;">McDonald's</a>
+                                                <a href="project_detail.html" style="font-size: 20px;"><%= companies[i].name %></a>
                                                 <br/>
                                                 <small style="font-size: 100%"><%= companies[i].description %>
                                                 </small>
