--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,9 +1,5 @@
 <% include layout_start %>
 
-<% function valuePercent(current, total) {
-    return ((current / total) * 100).toFixed(2);
-}%>
-
 <div class="wrapper wrapper-content">
     <div class="container">
         <div class="row">
@@ -39,47 +35,7 @@
                             </div>
 
                             <div class="project-list">
-                                <table class="table table-hover">
-                                    <tbody>
-                                    <% for (var i in parties) { %>
-                                        <tr>
-                                            <td class="project-status border-right vou" style="text-align: center">
-                                                <h2 style="display: block">Sab</h2>
-                                                <h3 style="display: block">18</h3>
-                                                <h4 style="display: block">Feb</h4>
-                                            </td>
-                                            <td class="project-title" style="max-width: 360px;">
-                                                <a href="events_detail.html"><%- parties[i].name %></a>
-                                                <br>
-                                                <small>Conheça a história do cara que saiu da universal e virou
-                                                    programador
-                                                </small>
-                                                <div style="display: flex; margin-top: 10px">
-                                                    <h4><i class="fa fa-map-marker"></i>&nbsp;<%- parties[i].place.name %></h4>
-                                                    <h4 style="margin-left: 10px"><i class="fa fa-clock-o"></i> 18:45h </h4>
-                                                </div>
-                                            </td>
-                                            <td class="project-completion">
-                                                <small style="font-size: 100%;">Total arrecadado: <%- valuePercent(parties[i].currentValue, parties[i].totalValue)  %>%</small>
-                                                <div class="progress progress-mini" style="height: 30px;">
-                                                    <div style="height: 29px;width: <%- valuePercent(parties[i].currentValue, parties[i].totalValue) %>%;" class="progress-bar"></div>
-                                                </div>
-                                            </td>
-                                            <td class="project-actions" style="">
-                                                <span style="font-size: 24px;">R$<%- parties[i].totalValue %></span><br>
-                                                <span style="font-size: initial;"><i class="fa fa-users"
-                                                                                     style="margin-right: 10px;">
-
-                                                    </i><%- parties[i].contributions.length + 1 %>/<%- parties[i].capacity %></span>
-                                            </td>
-                                            <td style="text-align: right">
-                                                <a href="/site/event/<%- parties[i].code %>"><button class="btn btn-white btn-lg">Ver mais
-                                                </button></a>
-                                            </td>
-                                        </tr>
-                                    <%}%>
-                                    </tbody>
-                                </table>
+                                <% include event_table %>
                             </div>
                         </div>
                     </div>
