--- a/views/layout_start.ejs
+++ b/views/layout_start.ejs
@@ -9,6 +9,9 @@
     <link href="/css/plugins/slick/slick.css" rel="stylesheet">
     <link href="/css/plugins/slick/slick-theme.css" rel="stylesheet">
     <link href="/css/plugins/steps/jquery.steps.css" rel="stylesheet">
+    <link href="/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
+    <link href="/css/build.css" rel="stylesheet">
+    <link href="/css/font-awesome.css" rel="stylesheet">
 
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/plugins/chosen/bootstrap-chosen.css" rel="stylesheet">
