--- a/views/layout_start.ejs
+++ b/views/layout_start.ejs
@@ -205,7 +205,7 @@
             <ul class="nav navbar-top-links navbar-right">
                 <li>
                     <a href="">
-                        R$ 120,00
+                        R$ <%- user.walletBalance ? user.walletBalance : '00,00' %>
                     </a>
                 </li>
                 <li>
