--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,14 +36,14 @@
                             <div class="project-list">
                                 <table class="table table-hover">
                                     <tbody>
-                                        <% for (var i in companies) { %>
+                                        <% for (var i = 0; i < companies.length; i++) { %>
                                         <tr>
                                             <td class="project-status">
                                             <span href="#"><img alt="image" src="/mc.png" class="img-circle"
                                                                 style="width: 90px; height: 90px;"/></span>
                                             </td>
                                             <td class="project-title" style="max-width: 360px;">
-                                                <a href="project_detail.html" style="font-size: 20px;"><%= companies[i].name %></a>
+                                                <a href="/site/company/<%= companies[i]._id %>" style="font-size: 20px;"><%= companies[i].name %></a>
                                                 <br/>
                                                 <small style="font-size: 100%"><%= companies[i].description %>
                                                 </small>
