Fix events list

--- a/views/event_table.ejs
+++ b/views/event_table.ejs
@@ -19,7 +19,7 @@
             <h4 style="display: block"><%- date[0] %></h4>
         </td>
         <td class="project-title" style="max-width: 360px;">
-            <a href="events_detail.html"><%- parties[i].name %></a>
+            <a href="/site/event/<%- parties[i].code %>"><%- parties[i].name %></a>
             <br>
             <small>Conheça a história do cara que saiu da universal e virou
                 programador
